Fixed validation to URI format instead.